--- a/static/styles.css
+++ b/static/styles.css
@@ -4,10 +4,17 @@
 
 html, body {
     height: 100%;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 body {
     display: flex;
     flex-direction: column;
 }
+
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none; /* Hide scrollbars */
+}
+
 
