data checks added

--- a/templates/supermatch.html
+++ b/templates/supermatch.html
@@ -35,7 +35,12 @@
                 </div>
             </div>
 
-            <div class="col"></div>
+            <div class="col">
+                <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
+                <select class="form-select" id="armwrestler2" name="armwrestler2" required disabled>
+                    <option value="none">Choose Armwrestler 1...</option>
+                </select>
+            </div>
         </div>
     </form>
 </div>
