--- a/templates/supermatch_partial.html
+++ b/templates/supermatch_partial.html
@@ -30,15 +30,22 @@
             </div>
 
             <div class="col">
-                {% if selected_armwrestler_1 != 'none' %}
+                
                 <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
-                <select class="form-select" id="armwrestler2" name="armwrestler2" required> 
-                    <option value="none">Choose...</option>
+                {% if selected_armwrestler_1 != 'none' %}
+                    <select class="form-select" id="armwrestler2" name="armwrestler2" required>
+                        <option value="none">Choose...</option>
                         {% for armwrestler in armwrestlers_2 %}
                             <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_2 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                         {% endfor %}
-                </select>
+                    </select>
+                {% else %}
+                    <select class="form-select" id="armwrestler2" name="armwrestler2" required disabled>
+                        <option value="none">Choose Armwrestler 1...</option>
+                    </select>
                 {% endif %}
+                
+                
             </div>
         </div>
 
