--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,7 @@
                             <a class="nav-link" href="{{ url_for('supermatch') }}">Supermatch</a>
                         {% endif %}
                             <a class="nav-link" href="{{ url_for('history') }}">History</a>
+                            <a class="nav-link" href="{{ url_for('prediction') }}">Prediction</a>
                     </div>
                     <div class="navbar-nav ms-auto">
                         {% if username %}
