--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,6 +27,7 @@
                         {% endif %}
                             <a class="nav-link" href="{{ url_for('history') }}">History</a>
                             <a class="nav-link" href="{{ url_for('prediction') }}">Prediction</a>
+                            <a class="nav-link" href="{{ url_for('elo_from_match') }}">ELO from match</a>
                     </div>
                     <div class="navbar-nav ms-auto">
                         {% if username %}
