fixed bug ranks + score for adding new member

--- a/templates/add_new_member.html
+++ b/templates/add_new_member.html
@@ -72,6 +72,11 @@
                 </select>
             </div>
         </div>
+        <div class="additional-controls mt-2">
+            {% if member_ready %}
+                <button type="submit" name="add_member" class="btn btn-success mt-3">Add member</button>
+            {% endif %}
+        </div>
     </form>
 </div>
 {% endblock %}
