--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -26,9 +26,9 @@
         <tbody>
             {% for armwrestler in armwrestlers %}
             <tr>
-                <td>#{{ armwrestler[0] }}</td>
+                <td><strong>#{{ armwrestler[0] }}</strong></td>
                 <td>{{ armwrestler[1] }}</td>
-                <td class="text-end">{{ armwrestler[2] }}</td>
+                <td class="text-end"><strong>{{ armwrestler[2] }}</strong></td>
                 {% if username %}
                 <td>
                     <form action="{{ url_for('remove_member') }}" method="POST" style="display: inline;">
