small wrapping bug

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -17,7 +17,7 @@
             <tr>
                 <th style="width: 15%;">Rank</th>
                 <th style="width: 30%;">Name</th>
-                <th class="text-end">{{ "Right ELO" if arm == 'right' else "Left ELO" }}</th>
+                <th class="text-end text-nowrap">{{ "Right ELO" if arm == 'right' else "Left ELO" }}</th>
                 {% if username %}
                 <th style="width: 15%;">Action</th>
                 {% endif %}
