nowrap on labels

--- a/templates/add_new_member_partial.html
+++ b/templates/add_new_member_partial.html
@@ -8,7 +8,7 @@
             <!-- Right ELO Section -->
             <div class="row align-items-center">
                 <div class="col-md-5">
-                    <label for="right_elo" class="form-label">Right&nbsp;ELO:</label>
+                    <label for="right_elo" class="form-label text-nowrap">Right ELO:</label>
                 </div>
                 <div class="col-md-7 d-flex justify-content-end">
                     <input type="number" class="form-control" id="right_elo" name="right_elo" value="{{ right_elo }}">
@@ -20,7 +20,7 @@
             <!-- Left ELO Section -->
             <div class="row align-items-center mt-2">
                 <div class="col-md-5">
-                    <label for="left_elo" class="form-label">Left&nbsp;ELO:</label>
+                    <label for="left_elo" class="form-label text-nowrap">Left ELO:</label>
                 </div>
                 <div class="col-md-7 d-flex justify-content-end">
                     <input type="number" class="form-control" id="left_elo" name="left_elo" value="{{ left_elo }}">
