--- a/templates/supermatch_partial.html
+++ b/templates/supermatch_partial.html
@@ -30,7 +30,6 @@
             </div>
 
             <div class="col">
-                
                 <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
                 {% if selected_armwrestler_1 != 'none' %}
                     <select class="form-select" id="armwrestler2" name="armwrestler2" required>
@@ -44,14 +43,12 @@
                         <option value="none">Choose Armwrestler 1...</option>
                     </select>
                 {% endif %}
-                
-                
             </div>
         </div>
 
         <!-- Submit Match button, shown only if all selections are made and none of them is 'none' -->
         {% if supermatch_ready %}
-        <label for="arm" class="form-label my-3">Supermatch result:</label>
+        <label for="arm" class="form-label my-2">Supermatch result:</label>
         <div class="row mb-3">
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="text-center fs-4">
@@ -76,9 +73,32 @@
                     <span class="{{ armwrestler_2_color }}">{{ armwrestler_2_diff }}</span>
                 </div>
             </div>
+        </div> 
+        {% if custom_score %}
+        <div class="row justify-content-center align-items-center">
+            <div class="col-3">
+                <input type="number" class="form-control" id="custom_score_1" name="custom_score_1" value="{{ custom_score_1 }}">
+            </div>
+            <div class="col-1 text-center fs-2"></div>
+            <div class="col-3">
+                <input type="number" class="form-control" id="custom_score_2" name="custom_score_2" value="{{ custom_score_2 }}">
+            </div>
         </div>
+        {% else %}
         <input type="range" class="form-range mt-2" id="score" name="score" min="0" max="5" value="{{ armwrestler_1_score }}">
-        <button type="submit" name="submit_match" class="btn btn-primary mt-2">Submit match</button>
+        {% endif %}
+        <div class="row mb-2">
+            <div class="col">
+                <button type="submit" name="submit_match" class="btn btn-primary mt-2">Submit match</button>
+            </div>
+            <div class="col text-end">
+                <div class="mt-2">
+                    <label class="btn btn-primary {{ 'active' if custom_score == 'true' else '' }}">
+                        <input type="checkbox" name="custom_score" id="custom_score" value="true" autocomplete="off" {{ 'checked' if custom_score == 'true' else '' }} class="visually-hidden">Custom score
+                    </label>
+                </div>
+            </div>
+        </div>
         {% endif %}
     </form>
 </div>
