--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -5,6 +5,9 @@
 {% block content %}
 <div class="mx-auto" style="max-width: 800px;">
     <h2 class="mb-4">Prediction</h2>
+    <div class="alert alert-secondary" role="alert">
+        This gives the expected results from the system. Another way to interpret this is, for example: a 60% to 40% ratio predicts a supermatch result of 3 : 2.
+    </div>
     <form method="POST" action="{{ url_for('prediction') }}" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
         <!-- Arm selection buttons -->
         <label for="arm" class="form-label">Chose arm for the prediction:</label>
