--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 
+<div class="alert alert-danger" role="alert">
+    Only right arm ranking is available for now. We have to collect data for the left arm.
+</div>
+
 <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
     <a href="{{ url_for('ranking', arm='right') }}" 
        class="btn btn-primary w-50 {{ 'active' if arm == 'right' else '' }}" role="button" aria-pressed="{{ 'true' if arm == 'right' else 'false' }}">Right arm</a>
