--- a/templates/supermatch_partial.html
+++ b/templates/supermatch_partial.html
@@ -49,10 +49,10 @@
         <!-- Submit Match button, shown only if all selections are made and none of them is 'none' -->
         {% if supermatch_ready %}
         <label for="arm" class="form-label my-2">Supermatch result:</label>
-        <div class="row mb-3">
+        <div class="row mb-2">
             <div class="col d-flex justify-content-center align-items-center">
-                <div class="text-center fs-4">
-                    <span class="{{ armwrestler_1_color }}">{{ armwrestler_1_diff }}</span>
+                <div class="text-center fs-5">
+                    <span class="{{ armwrestler_1_color }}">{{armwrestler_1_elo}} {{ armwrestler_1_diff }}</span>
                 </div>
             </div>
             <div class="col d-flex justify-content-center align-items-center">
@@ -61,7 +61,7 @@
                 </div>
             </div>
             
-            <div class="col-1 text-center fs-2">:</div>
+            <div class="col-1 d-flex justify-content-center align-items-center text-center fs-2">:</div>
 
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="text-center fs-3">
@@ -69,13 +69,13 @@
                 </div>
             </div>
             <div class="col d-flex justify-content-center align-items-center">
-                <div class="text-center fs-4">
-                    <span class="{{ armwrestler_2_color }}">{{ armwrestler_2_diff }}</span>
+                <div class="text-center fs-5">
+                    <span class="{{ armwrestler_2_color }}">{{armwrestler_2_elo}} {{ armwrestler_2_diff }}</span>
                 </div>
             </div>
         </div> 
         {% if custom_score %}
-        <div class="row justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-center mb-2">
             <div class="col-3">
                 <input type="number" class="form-control" id="custom_score_1" name="custom_score_1" value="{{ custom_score_1 }}">
             </div>
